[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-flask"
version = "1.0.0"
description = "微信云托管 Flask 应用"
requires-python = ">=3.6"
dependencies = [
    "click==8.0.3",
    "Flask==2.0.2",
    "Flask-SQLAlchemy==2.5.1",
    "greenlet==1.1.2",
    "itsdangerous==2.0.1",
    "Jinja2==3.0.3",
    "MarkupSafe==2.0.1",
    "PyMySQL==1.0.2",
    "SQLAlchemy==1.4.29",
    "Werkzeug==2.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
]

[tool.setuptools]
packages = ["wxcloudrun"]
